--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -1,4 +1,3 @@
-/* Colors */
 $black: rgb(0,0,0)
 $dark: rgb(15,15,15)
 $dark-grey: rgb(40,40,40)
@@ -11,3 +10,8 @@ $violet: rgb(147,61,186)
 $orange: rgb(255,165,0)
 $red: rgb(255,0,0)
 $light-green: rgb(50,168,82)
+
+$breakpoint-mobile-min: "320px"
+$breakpoint-mobile-max: "480px"
+$breakpoint-tablet: "768px"
+$breakpoint-desktop-small: "1024px"
