--- a/src/styles/components/_modalBody.sass
+++ b/src/styles/components/_modalBody.sass
@@ -1,4 +1,5 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .modal-body
   position: fixed
@@ -18,7 +19,7 @@
   &__box
     text-align: center
     width: 50%
-    @media (min-width: 320px) and (max-width: 480px)
+    @include respond-to("mobile")
       width: 60%
     background-color: $white
     padding: 1.5rem 2rem 2rem 2rem
