--- a/src/styles/components/_contactForm.sass
+++ b/src/styles/components/_contactForm.sass
@@ -1,4 +1,5 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .contact-form
   display: flex
@@ -9,7 +10,7 @@
   &__input
     box-sizing: border-box
     width: 100%
-    @media (min-width: 320px) and (max-width: 767px)
+    @include respond-to("tablet")
       width: 80%
     padding: 0.3rem
     border: none
@@ -18,7 +19,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     box-sizing: border-box
     width: 100%
-    @media (min-width: 320px) and (max-width: 767px)
+    @include respond-to("tablet")
       width: 80%
     background-color: $white
     padding: 0.3rem
