--- a/src/styles/components/_headerText.sass
+++ b/src/styles/components/_headerText.sass
@@ -1,4 +1,5 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .header-text
   display: flex
@@ -9,7 +10,7 @@
     bottom: 1.7rem
     left: 1.5rem
   margin-left: 3rem
-  @media (min-width: 320px) and (max-width: 480px)
+  @include respond-to("mobile")
     margin-left: 2rem
   &__headline
     margin:
