--- a/src/styles/components/_navMenu.sass
+++ b/src/styles/components/_navMenu.sass
@@ -1,76 +1,79 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .nav-menu
-  position: fixed
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  z-index: 5
-  background-color: rgba(0, 0, 0, 0.4)
-  color: $white
-  backdrop-filter: blur(15px)
-  &--fade-in
-    animation: fade-page-in 1s forwards
-  &--fade-out
-    animation: fade-page-out 0.8s forwards
-  &__menu-list
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-direction: column
-    list-style: none
-    text-align: center
-    padding-inline-start: 0
-    margin-top: 2rem
-    &__menu-item
-      margin-bottom: 1.4rem
-      &--fade-in-speed1
-        animation: zoom-text-in 0.1s forwards
-      &--fade-in-speed2
-        animation: zoom-text-in 0.25s forwards
-      &--fade-in-speed3
-        animation: zoom-text-in 0.5s forwards
-      &--fade-in-speed4
-        animation: zoom-text-in 1s forwards
-      &--fade-in-speed5
-        animation: zoom-text-in 1.2s forwards
-      &--fade-in-speed6
-        animation: zoom-text-in 1.4s forwards
-      &--fade-out-speed1
-        animation: zoom-text-out 0.05s forwards
-      &--fade-out-speed2
-        animation: zoom-text-out 0.1s forwards
-      &--fade-out-speed3
-        animation: zoom-text-out 0.25s forwards
-      &--fade-out-speed4
-        animation: zoom-text-out 0.5s forwards
-      &--fade-out-speed5
-        animation: zoom-text-out 1s forwards
-      &--fade-out-speed6
-        animation: zoom-text-out 1.5s forwards
-    &__menu-link
-      text-decoration: none
-      color: $orange
-    &__select-language
-      font-family: inherit
-      font-size: inherit
-      background-color: transparent
-      padding: 0.2rem 0.8rem 0.3rem 0.8rem
-      border: none
-      margin-top: 0
-      margin-left: 0.8rem
-
-.close-menu
-  display: flex
-  justify-content: flex-end
-  align-items: center
-  margin-right: 4.3rem
-  @media (min-width: 320px) and (max-width: 480px)
-    margin-right: 2.3rem
-  &__button
-    background: transparent
+  display: none
+  @include respond-to("desktop-small")
+    display: block
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    z-index: 5
+    background-color: rgba(0, 0, 0, 0.4)
     color: $white
-    padding: 0
-    border: none
-    margin-top: 2.5rem
+    backdrop-filter: blur(15px)
+    &--fade-in
+      animation: fade-page-in 1s forwards
+    &--fade-out
+      animation: fade-page-out 0.8s forwards
+    &__menu-list
+      display: flex
+      justify-content: center
+      align-items: center
+      flex-direction: column
+      list-style: none
+      text-align: center
+      padding-inline-start: 0
+      margin-top: 2rem
+      &__menu-item
+        margin-bottom: 1.4rem
+        &--fade-in-speed1
+          animation: zoom-text-in 0.1s forwards
+        &--fade-in-speed2
+          animation: zoom-text-in 0.25s forwards
+        &--fade-in-speed3
+          animation: zoom-text-in 0.5s forwards
+        &--fade-in-speed4
+          animation: zoom-text-in 1s forwards
+        &--fade-in-speed5
+          animation: zoom-text-in 1.2s forwards
+        &--fade-in-speed6
+          animation: zoom-text-in 1.4s forwards
+        &--fade-out-speed1
+          animation: zoom-text-out 0.05s forwards
+        &--fade-out-speed2
+          animation: zoom-text-out 0.1s forwards
+        &--fade-out-speed3
+          animation: zoom-text-out 0.25s forwards
+        &--fade-out-speed4
+          animation: zoom-text-out 0.5s forwards
+        &--fade-out-speed5
+          animation: zoom-text-out 1s forwards
+        &--fade-out-speed6
+          animation: zoom-text-out 1.5s forwards
+      &__menu-link
+        text-decoration: none
+        color: $orange
+      &__select-language
+        font-family: inherit
+        font-size: inherit
+        background-color: transparent
+        padding: 0.2rem 0.8rem 0.3rem 0.8rem
+        border: none
+        margin-top: 0
+        margin-left: 0.8rem
+    &__close
+      display: flex
+      justify-content: flex-end
+      align-items: center
+      margin-right: 4.3rem
+      @include respond-to("mobile")
+        margin-right: 2.3rem
+      &__button
+        background: transparent
+        color: $white
+        padding: 0
+        border: none
+        margin-top: 2.5rem
