--- a/src/styles/views/_contact.sass
+++ b/src/styles/views/_contact.sass
@@ -1,4 +1,5 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .contact
   color: $white
@@ -11,7 +12,7 @@
     align-items: center
     flex-direction: column
     width: 30rem
-    @media (min-width: 320px) and (max-width: 767px)
+    @include respond-to("tablet")
       width: 66%
     background-color: $dark
     color: $white
