--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -2,49 +2,52 @@
 
 .project-details
   display: flex
-  justify-content: space-between
-  align-items: center
+  justify-content: space-around
+  align-items: flex-start
   flex-direction: column
-  background-color: $dark
-  width: 22rem
-  height: 30rem
+  width: 28rem
+  height: 42rem
   border: solid 1px $dark
   margin: 0 1.5rem 1.5rem 1.5rem
+  &__screenshots-box
+    position: relative
+  &__screenshot-desktop
+    top: 0
+    width: 28rem
+    height: 16rem
+    position: absolute
+    z-index: 1
+    &__image
+      width: 100%
+      height: 100%
+  &__screenshot-mobile
+    top: 10rem
+    left: 17rem
+    width: 10rem
+    height: 19rem
+    z-index: 10
+    position: absolute
+    &__image
+      width: 100%
+      height: 100%
   &__description
-    height: 11rem
+    height: 10rem
     color: $white
     padding:
       left: 1rem
       right: 1rem
     &__project-name
-      font-size: 1.6rem
-      margin: 0 0 0.6rem 0
+      margin: 1.5rem 0 0.6rem 0
     &__paragraph
-      font-size: 1rem
-      width: 16rem
+      width: 15rem
 
 .project-links
   display: flex
   justify-content: space-between
-  align-items: center
+  align-items:center
   flex-wrap: wrap
-  margin:
-    top: 0
-    bottom: 1rem
   padding-bottom: 1.5rem
-  &__try-it-link
-    text-decoration: none
-    font-size: 0.9rem
-    display: inline-block
-    color: $white
-    padding: 0.3rem 0.8rem
-    border: solid 2px $light-green
-    margin:
-      right: 0.3rem
-      left: 0.3rem
-    transition: all 1s
-    &:hover 
-      background-color: $light-green
+  margin-top: 2rem
   &__github-link  
     text-decoration: none
     font-size: 0.9rem
