--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -5,7 +5,7 @@
   justify-content: space-around
   align-items: flex-start
   flex-direction: column
-  width: 28rem
+  width: 24rem
   height: 42rem
   border: solid 1px $dark
   margin: 0 1.5rem 1.5rem 1.5rem
@@ -13,7 +13,7 @@
     position: relative
   &__screenshot-desktop
     top: 0
-    width: 28rem
+    width: 24rem
     height: 16rem
     position: absolute
     z-index: 1
@@ -21,8 +21,8 @@
       width: 100%
       height: 100%
   &__screenshot-mobile
-    top: 10rem
-    left: 17rem
+    top: 11rem
+    left: 14rem
     width: 10rem
     height: 19rem
     z-index: 10
@@ -31,6 +31,7 @@
       width: 100%
       height: 100%
   &__description
+    width: 14rem
     height: 10rem
     color: $white
     padding:
@@ -39,18 +40,20 @@
     &__project-name
       margin: 1.5rem 0 0.6rem 0
     &__paragraph
-      width: 15rem
+      width: 13rem
+      height: 4.5rem
 
 .project-links
   display: flex
   justify-content: space-between
   align-items:center
   flex-wrap: wrap
+  width: 90%
   padding-bottom: 1.5rem
   margin-top: 2rem
   &__github-link  
     text-decoration: none
-    font-size: 0.9rem
+    font-size: 0.8rem
     display: inline-block
     color: $white
     padding: 0.3rem 0.8rem
