--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -1,11 +1,14 @@
 @import "../base/variables"
+@import "../base/breakpoints"
 
 .project-details
   display: flex
   justify-content: space-around
   align-items: flex-start
   flex-direction: column
-  width: 24rem
+  width: 26rem
+  @include respond-to("tablet")
+    width: 24rem
   height: 42rem
   border: solid 1px $dark
   margin: 0 1.5rem 1.5rem 1.5rem
@@ -13,7 +16,9 @@
     position: relative
   &__screenshot-desktop
     top: 0
-    width: 24rem
+    width: 26rem
+    @include respond-to("tablet")
+      width: 24rem
     height: 16rem
     position: absolute
     z-index: 1
@@ -22,7 +27,9 @@
       height: 100%
   &__screenshot-mobile
     top: 11rem
-    left: 14rem
+    left: 17rem
+    @include respond-to("tablet")
+      left: 14rem
     width: 10rem
     height: 19rem
     z-index: 10
@@ -40,7 +47,9 @@
     &__project-name
       margin: 1.5rem 0 0.6rem 0
     &__paragraph
-      width: 13rem
+      width: 14rem
+      @include respond-to("tablet")
+        width: 10rem
       height: 4.5rem
 
 .project-links
@@ -48,7 +57,9 @@
   justify-content: space-between
   align-items:center
   flex-wrap: wrap
-  width: 90%
+  width: 95%
+  @include respond-to("tablet")
+    width: 60%
   padding-bottom: 1.5rem
   margin-top: 2rem
   &__github-link  
@@ -56,11 +67,12 @@
     font-size: 0.8rem
     display: inline-block
     color: $white
-    padding: 0.3rem 0.8rem
+    padding: 0.3rem 0.6rem
     border: solid 2px $blue
     margin:
       right: 0.3rem
       left: 0.3rem
+      bottom: 1rem
     transition: all 1s
     &:hover 
       background-color: $blue
