--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -51,6 +51,8 @@
       @include respond-to("tablet")
         width: 10rem
       height: 4.5rem
+      @include respond-to("tablet")
+        height: 6.5rem
 
 .project-links
   display: flex
