--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -72,8 +72,8 @@
     padding: 0.3rem 0.6rem
     border: solid 2px $blue
     margin:
-      right: 0.3rem
-      left: 0.3rem
+      right: 0
+      left: 0
       bottom: 1rem
     transition: all 1s
     &:hover 
