--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -6,9 +6,9 @@
   justify-content: space-around
   align-items: flex-start
   flex-direction: column
-  width: 26rem
+  width: 24rem
   @include respond-to("tablet")
-    width: 24rem
+      width: 20rem
   height: 42rem
   border: solid 1px $dark
   margin: 0 1.5rem 1.5rem 1.5rem
@@ -16,22 +16,30 @@
     position: relative
   &__screenshot-desktop
     top: 0
-    width: 26rem
+    width: 24rem
     @include respond-to("tablet")
-      width: 24rem
-    height: 16rem
+      width: 20rem
+    height: 15rem
+    @include respond-to("tablet")
+      height: 13rem
     position: absolute
     z-index: 1
     &__image
       width: 100%
       height: 100%
   &__screenshot-mobile
-    top: 11rem
-    left: 17rem
+    top: 13rem
     @include respond-to("tablet")
-      left: 14rem
-    width: 10rem
-    height: 19rem
+      top: 17rem
+    left: 18rem
+    @include respond-to("tablet")
+      left: 13rem
+    width: 8rem
+    @include respond-to("tablet")
+      width: 7rem
+    height: 16rem
+    @include respond-to("tablet")
+      height: 15rem
     z-index: 10
     position: absolute
     &__image
@@ -57,7 +65,7 @@
 .project-links
   display: flex
   justify-content: space-between
-  align-items:center
+  align-items: center
   flex-wrap: wrap
   width: 95%
   @include respond-to("tablet")
