css transition improved

--- a/src/styles/components/_contactLink.sass
+++ b/src/styles/components/_contactLink.sass
@@ -4,6 +4,7 @@
   text-decoration: none
   color: $dark-blue
   white-space: nowrap
-  transition: all 0.5s
+  will-change: color
+  transition: color 0.5s
   &:hover 
     color: $light-blue
