--- a/src/styles/components/_modalBody.sass
+++ b/src/styles/components/_modalBody.sass
@@ -36,7 +36,8 @@
       margin:
         right: 0.5rem
         left: 0.5rem
-      transition: all 1s
+      will-change: background-color
+      transition: background-color 1s
       &:hover 
         background-color: $light-green
         color: $white
