--- a/src/styles/views/_about.sass
+++ b/src/styles/views/_about.sass
@@ -27,6 +27,7 @@
   &__contact-link
     text-decoration: none
     color: $dark-blue
-    transition: all 0.5s
+    will-change: color
+    transition: color 0.5s
     &:hover 
       color: $light-blue
