--- a/src/styles/components/_contactForm.sass
+++ b/src/styles/components/_contactForm.sass
@@ -34,6 +34,7 @@
     padding: 0.3rem 0.6rem
     border: solid 2px $light-green
     margin-bottom: 1.5rem
-    transition: all 0.5s
+    will-change: background-color
+    transition: background-color 0.5s
     &:hover 
       background-color: $light-green
