--- a/src/styles/components/_projectDetails.sass
+++ b/src/styles/components/_projectDetails.sass
@@ -86,6 +86,7 @@
       right: 0
       left: 0
       bottom: 1rem
-    transition: all 1s
+    will-change: background-color
+    transition: background-color 1s
     &:hover 
       background-color: $blue
