--- a/src/styles/views/_notFound.sass
+++ b/src/styles/views/_notFound.sass
@@ -21,6 +21,7 @@
       margin:
         top: 2rem
         bottom: 2rem
-      transition: all 0.5s
+      will-change: background-color
+      transition: background-color 0.5s
       &:hover 
         background-color: $light-green
