--- a/src/styles/views/_about.sass
+++ b/src/styles/views/_about.sass
@@ -4,7 +4,7 @@
 .about
   display: flex
   flex-direction: column
-  color: $white
+  color: $black
   margin-top: 8rem
   animation: fade-page-in 1s forwards
   &__text
