--- a/src/styles/views/_contact.sass
+++ b/src/styles/views/_contact.sass
@@ -14,10 +14,8 @@
     width: 30rem
     @include respond-to("tablet")
       width: 66%
-    background-color: $dark
-    color: $white
+    color: $black
     padding: 0
-    border: solid 1px $dark
     margin: 4rem auto
     &__name
       margin:
