--- a/src/styles/views/_projects.sass
+++ b/src/styles/views/_projects.sass
@@ -1,7 +1,7 @@
 @import "../base/variables"
 
 .projects
-  color: $white
+  color: $black
   margin-top: 8rem
   animation: fade-page-in 1s forwards
   &__collection
