--- a/src/styles/base/_global.sass
+++ b/src/styles/base/_global.sass
@@ -1,7 +1,8 @@
 @import "variables"
 
 body
-  background-color: $black
+  background-color: $white
+  color: $black
   height: 100%
   width: 100%
   height: 100vh
