--- a/src/styles/components/_contactForm.sass
+++ b/src/styles/components/_contactForm.sass
@@ -21,7 +21,7 @@
     width: 100%
     @include respond-to("tablet")
       width: 80%
-    background-color: $white
+    background-color: white
     padding: 0.3rem
     box-sizing: border-box
     border: none
@@ -29,8 +29,8 @@
   &__button
     width: auto
     font-size: 0.8rem
-    background-color: black
-    color: $white
+    background-color: $white
+    color: $black
     padding: 0.3rem 0.6rem
     border: solid 2px $light-green
     margin-bottom: 1.5rem
@@ -38,3 +38,4 @@
     transition: background-color 0.5s
     &:hover 
       background-color: $light-green
+      color: $white
