--- a/src/styles/components/_footer.sass
+++ b/src/styles/components/_footer.sass
@@ -7,8 +7,8 @@
   align-items: center
   @include respond-to("mobile")
     flex-wrap: wrap
-  background-color: $black
-  color: $white
+  background-color: $white
+  color: $black
   padding:
     top: 0.5rem
     bottom: 0.5rem
