--- a/src/styles/components/_header.sass
+++ b/src/styles/components/_header.sass
@@ -3,7 +3,8 @@
 .header
   display: flex
   align-items: center
-  margin-left: 1.5rem 
+  margin-left: 1.5rem
+  color: $black 
   @include respond-to("mobile")
     margin:
       left: 2rem
