--- a/src/styles/components/_modalBody.sass
+++ b/src/styles/components/_modalBody.sass
@@ -36,8 +36,8 @@
       margin:
         right: 0.5rem
         left: 0.5rem
-      will-change: background-color
-      transition: background-color 1s
+      will-change: background-color, color
+      transition: background-color, color 0.5s
       &:hover 
         background-color: $light-green
         color: $white
